# py-aws-lambda

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.yaml  x1_init.ps1  x1_init.sh  x2_activate.ps1  x2_activate.sh  x3_sam_build.ps1  x3_sam_run.ps1  x4_sam_build.ps1
.run/: test.run.xml
notes/: ai-chat.md
src/py_aws_lambda/app/: app.py
src/py_aws_lambda/controller/: addresses_controller.py  users_controller.py
src/py_aws_lambda/handler/: addresses_handler.py  users_handler.py
src/py_aws_lambda/local/: local_server.py
